add food prediction
